--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="LyricAI/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/Gabe Markarian/SkyDrive/UMass/AI/LyricProcessor/OpenNLP/opennlp-tools-1.6.0.jar"/>
 	<classpathentry kind="output" path="LyricAI/bin"/>
 </classpath>
