--- a/LyricAI/.classpath
+++ b/LyricAI/.classpath
@@ -2,5 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry kind="lib" path="/383 group project (data finder)/jsoup-1.8.3.jar"/>
+	<classpathentry kind="lib" path="/383 group project (data finder)/sqlite-jdbc-3.8.11.2.jar"/>
+	<classpathentry kind="lib" path="/LyricProcessor/OpenNLP/en-pos-maxent.bin"/>
+	<classpathentry kind="lib" path="/LyricProcessor/OpenNLP/en-pos-perceptron.bin"/>
+	<classpathentry kind="lib" path="/LyricProcessor/OpenNLP/opennlp-tools-1.6.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
