time predictor averaging within 4 years of accuracy for songs 1990+, within 2 years for songs 2000+, not bad

--- a/LyricAI/bin/.gitignore
+++ b/LyricAI/bin/.gitignore
@@ -4,3 +4,7 @@
 /queries.class
 /tonyTestDriver.class
 /Lyrics2005.class
+/timePrediction.class
+/Lyrics3005.class
+/timePrediction$weekCount.class
+/timePrediction$songPredictedActual.class
